6284 | 14 files | M game/citadel/bin/win64/client_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/panorama/layout/pages/citadel_db_page_control_library.xml,  M game/citadel/pak01_dir/panorama/layout/popups/popup_sell_max_items.xml,  M game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_fencer.css,  M game/citadel/pak01_dir/panorama/styles/citadel_base_styles.css,  M game/citadel/pak01_dir/panorama/styles/citadel_shop_mod_icon.css,  M game/citadel/pak01_dir/panorama/styles/citadel_shop_mod_view.css,  M game/citadel/pak01_dir/panorama/styles/pages/citadel_db_page_control_library.css,  M game/citadel/pak01_dir/panorama/styles/popups/popup_sell_max_items.css,  M game/citadel/pak01_dir/soundevents/hero/fencer.vsndevts,  M game/citadel/pak01_dir/soundevents/hero/werewolf.vsndevts,  M game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt,  M game/citadel/steam.inf
https://steamdb.info/patchnotes/21909957/

--- a/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_fencer.css
+++ b/game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_fencer.css
@@ -45,6 +45,37 @@
 	visibility: collapse;
 }
 
+.ability_fencer_lunge.ability_element_progress
+{
+	transform: rotateZ(0deg);
+	ui-scale: 70%;
+	margin-left: 0px;
+}
+
+.ability_fencer_lunge .SplitLabelProgressBar .SplitLabelName Image
+{
+	animation-name: DefaultAnim;
+	animation-duration: 0.4s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-frame-time: 300ms;
+}
+
+.ability_fencer_lunge .SplitLabelProgressBar .SplitLabelName Image:nth-child(odd)
+{
+	animation-direction: alternate-reverse;
+}
+
+.ability_fencer_lunge .SplitLabelProgressBar .SplitLabelName Image:nth-child(even)
+{
+	animation-direction: alternate;
+}
+
+.ability_fencer_lunge .SplitLabelProgressBar .SplitLabelProgress
+{
+	wash-color: fencerColor;
+}
+
 .SplitLabelProgressBar .SplitLabelName Image
 {
 	animation-name: DefaultAnim;
