--- a/game/citadel/pak01_dir/panorama/styles/popups/popup_sell_max_items.css
+++ b/game/citadel/pak01_dir/panorama/styles/popups/popup_sell_max_items.css
@@ -3,8 +3,13 @@
 PopupSellMaxItems.PopupPanel
 {
 	flow-children: down;
-	width: 1050px;
-	padding: 0px;
+	width: 1150px;
+	height: 800px;
+}
+
+PopupSellMaxItems.PopupPanel.ShowOnlyActive
+{
+	height: 650px;
 }
 
 .PopupPanel
@@ -13,13 +18,121 @@ PopupSellMaxItems.PopupPanel
 	border: 0px;
 }
 
+@keyframes 'PopupBackgroundTransitionOn'
+{
+	0%
+	{
+		opacity-mask: url("s2r://panorama/images/buttons/button_nav_mask_threshold_psd.vtex");
+		opacity-mask-threshold: 100% 2%;
+	}
+	
+	100%
+	{
+		opacity-mask: url("s2r://panorama/images/buttons/button_nav_mask_threshold_psd.vtex");
+		opacity-mask-threshold: 2% 2%;
+	}
+	
+}
+
+.PopupPanel
+{
+	min-width: 256px;
+	padding: 0px;
+	box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 32px 0px;
+	border: 0px;
+	background-color: none;
+	overflow: noclip;
+	opacity-mask: url("s2r://panorama/images/buttons/button_nav_mask_threshold_psd.vtex");
+	opacity-mask-threshold: 0% 2%;
+	animation-name: PopupBackgroundTransitionOn;
+	animation-duration: 0.25s;
+	animation-iteration-count: 1;
+}
+
+.PopupPanel .PopupBackground
+{
+	ignore-parent-flow: true;
+	width: 100%;
+	height: 100%;
+	brightness: 1.25;
+	saturation: 1.25;
+	background-image: url("s2r://panorama/images/textures/paper_tile_1k_02_dark_psd.vtex");
+	opacity-mask: url("s2r://panorama/images/buttons/popup_mask_threshold_psd.vtex");
+	opacity-mask-threshold: 2% 2%;
+	animation-name: PopupBackgroundTransitionOn;
+	animation-duration: 0.25s;
+	animation-iteration-count: 1;
+}
+
+.PopupPanel .PopupBackgroundShadow
+{
+	overflow: noclip;
+	ignore-parent-flow: true;
+	width: 100%;
+	height: 100%;
+	position: 0px 8px 0px;
+	background-color: rgba(0, 0, 0, 0.5);
+	opacity-mask: url("s2r://panorama/images/buttons/button_nav_mask_threshold_psd.vtex");
+	opacity-mask-threshold: 2% 2%;
+	animation-name: PopupBackgroundTransitionOn;
+	animation-duration: 0.25s;
+	animation-iteration-count: 1;
+}
+
+#PopupContent
+{
+	flow-children: down;
+	padding: 30px;
+	width: 100%;
+	height: 100%;
+}
+
+#HeaderContainer
+{
+	height: fit-children;
+	width: 100%;
+	flow-children: right;
+	margin: 30px 40px;
+}
+
+#ItemsFull
+{
+	flow-children: down;
+	vertical-align: middle;
+}
+
+#HeaderLabel
+{
+	color: offWhite;
+	font-size: 42px;
+	font-weight: semibold;
+	font-family: block;
+	text-transform: uppercase;
+	margin-bottom: 5px;
+}
+
+.headerDesc
+{
+	color: #F3F0E788;
+	font-size: 24px;
+	font-weight: semi-bold;
+}
+
+.headerDesc .highlight
+{
+	color: white;
+}
+
 #ModToPurchaseContainer
 {
 	flow-children: right;
-	horizontal-align: center;
-	width: 100%;
-	padding: 40px;
-	border-bottom: 8px solid #FF410D;
+	horizontal-align: right;
+	margin-right: 30px;
+	width: fit-children;
+	padding: 20px;
+	min-width: 430px;
+	background-color: offBlack;
+	border-radius: 3px;
 }
 
 #ModNameAndCostContainer
@@ -36,61 +149,49 @@ PopupSellMaxItems.PopupPanel
 #ModCost
 {
 	margin-left: 5px;
-	color: #FFED79;
+	color: shardColor;
 	font-size: 24px;
 	font-weight: bold;
 }
 
 #modNameToPurchase
 {
-	color: #F3F0E7;
-	font-size: 30px;
+	color: offWhite;
+	font-size: 26px;
 	font-weight: semibold;
-}
-
-.topModContainer
-{
-	horizontal-align: center;
 }
 
 .SellingWeaponMod #ModToPurchaseContainer
 {
 	background-color: weaponColorFaded;
-	background-color: courageBrightColor&30;
+	background-color: courageBrightColor&20;
 }
 
 .SellingArmorMod #ModToPurchaseContainer
 {
 	background-color: armorColorFaded;
-	background-color: fortitudeBrightColor&30;
+	background-color: fortitudeBrightColor&20;
 }
 
 .SellingTechMod #ModToPurchaseContainer
 {
 	background-color: techColorFaded;
-	background-color: spiritBrightColor&30;
-}
-
-#HeaderLabel
-{
-	vertical-align: center;
-	color: #FF410D;
-	font-size: 30px;
-	font-weight: semibold;
-}
-
-#HeaderContainer
-{
-	height: fit-children;
-	width: 100%;
-	flow-children: down;
-	margin: 32px;
+	background-color: spiritBrightColor&20;
 }
 
 #CompletePurchaseLabel
 {
 	text-align: center;
 	margin-top: 20px;
+}
+
+#InventorySlots
+{
+	horizontal-align: middle;
+	background-color: offBlack&70;
+	padding: 20px;
+	margin-top: 20px;
+	border-radius: 3px;
 }
 
 #ModsSellContainer
@@ -102,8 +203,7 @@ PopupSellMaxItems.PopupPanel
 #ModsContainer
 {
 	flow-children: down-wrap;
-	margin: 0px 50px;
-	height: 380px;
+	max-height: 380px;
 }
 
 .ShowOnlyActive #ModsContainer
@@ -114,16 +214,16 @@ PopupSellMaxItems.PopupPanel
 
 .buttonToSell
 {
-	border: 2px solid transparent;
-	margin: 8px;
+	margin: 4px;
+	padding: 4px;
+	flow-children: down;
+	border-radius: 3px;
 }
 
 .buttonToSell #ModView
 {
 	horizontal-align: center;
 	vertical-align: middle;
-	opacity: 1.0;
-	brightness: 1.0;
 	ui-scale: 120%;
 }
 
@@ -135,92 +235,8 @@ PopupSellMaxItems.PopupPanel
 #ButtonsContainer
 {
 	horizontal-align: center;
-	margin: 48px;
+	margin: 18px;
 	flow-children: right;
-}
-
-.sellButton
-{
-	margin-left: 16px;
-	margin-right: 16px;
-	background-color: rgba (243, 240, 231, 0.05);
-	padding: 16px 30px 16px 30px;
-	border-radius: 3px;
-}
-
-.sellButton:hover:enabled
-{
-	background-color: rgba (243, 240, 231, 0.15);
-}
-
-.sellButton:disabled
-{
-	opacity: 0.5;
-}
-
-.sellButton Label
-{
-	vertical-align: center;
-}
-
-.WeaponMod .mod_icon
-{
-	wash-color: weaponColor;
-}
-
-.WeaponMod.buttonToSell
-{
-	background-color: weaponColorFaded;
-}
-
-.WeaponMod.buttonToSell:Hover
-{
-	background-color: #FFA82666;
-}
-
-.ArmorMod .mod_icon
-{
-	wash-color: armorColor;
-}
-
-.ArmorMod.buttonToSell
-{
-	background-color: armorColorFaded;
-	background-color: fortitudeBrightColor&30;
-}
-
-.ArmorMod.buttonToSell:Hover
-{
-	background-color: #00FF9966;
-	background-color: fortitudeBrightColor&10;
-}
-
-.TechMod .mod_icon
-{
-	wash-color: techColor;
-}
-
-.TechMod.buttonToSell
-{
-	background-color: techColorFaded;
-	background-color: spiritBrightColor&30;
-}
-
-.TechMod.buttonToSell:Hover
-{
-	background-color: #00DDFF66;
-	background-color: spiritBrightColor&10;
-}
-
-.headerDesc
-{
-	color: #F3F0E788;
-	horizontal-align: center;
-}
-
-.headerDesc .highlight
-{
-	color: white;
 }
 
 .sellButton Label
@@ -231,7 +247,6 @@ PopupSellMaxItems.PopupPanel
 
 .buttonToSell.sellRecommended
 {
-	border: 2px solid #ffffff40;
 	animation-name: recommended_to_sell;
 	animation-duration: 1.2s;
 	animation-iteration-count: infinite;
@@ -239,24 +254,32 @@ PopupSellMaxItems.PopupPanel
 
 .recommendedToSellLabel
 {
-	font-size: 11px;
+	font-size: 12px;
 	text-transform: uppercase;
 	font-weight: bold;
-	background-color: red;
 	padding: 0px 4px;
-	background-color: offWhite&80;
-	color: offBlack;
+	color: shardColor;
 	font-family: sansMono;
 	horizontal-align: center;
+	text-overflow: shrink;
+	max-height: 15px;
 	width: 100%;
 	text-align: center;
 	z-index: 100;
-	visibility: collapse;
+	opacity: 0;
+	margin-top: 0px;
 }
 
 .sellRecommended .recommendedToSellLabel
 {
-	visibility: visible;
+	opacity: 1;
+}
+
+.sellRecommended CitadelShopMod
+{
+	animation-name: card_wiggle;
+	animation-duration: 1.2s;
+	animation-iteration-count: infinite;
 }
 
 @keyframes 'recommended_to_sell'
@@ -278,10 +301,39 @@ PopupSellMaxItems.PopupPanel
 	
 }
 
+@keyframes 'card_wiggle'
+{
+	0%
+	{
+		brightness: 1;
+		pre-transform-scale2d: 1;
+	}
+	
+	50%
+	{
+		brightness: 1.2;
+		pre-transform-scale2d: 1.02;
+		transform: rotateZ(1deg);
+	}
+	
+	100%
+	{
+		brightness: 1;
+		pre-transform-scale2d: 1;
+	}
+	
+}
+
 .modsRow
 {
 	flow-children: right;
 	horizontal-align: center;
 	width: fit-children;
+}
+
+.sellRecommended
+{
+	border: 2px solid shardColor&80;
+	background-color: shardColor&10;
 }
 
