6290 | 12 files | M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/panorama/styles/hud_team_objective_health.css,  M game/citadel/pak01_dir/pulse/maps/dl_midtown.vpulse,  M game/citadel/pak01_dir/scripts/abilities.vdata,  M game/citadel/pak01_dir/scripts/heroes.vdata,  M game/citadel/pak01_dir/scripts/modifiers.vdata,  M game/citadel/pak01_dir/scripts/npc_units.vdata,  M game/citadel/pak01_dir/soundevents/hero/familiar.vsndevts,  M game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt,  M game/citadel/steam.inf
https://steamdb.info/patchnotes/21914604/

--- a/game/citadel/pak01_dir/panorama/styles/hud_team_objective_health.css
+++ b/game/citadel/pak01_dir/panorama/styles/hud_team_objective_health.css
@@ -68,3 +68,8 @@
 	width: 500px;
 }
 
+.gamemode_streetbrawl #shield_gen_container,.gamemode_streetbrawl #base_boss_container
+{
+	visibility: collapse;
+}
+
